@@ -13,6 +13,8 @@ Revision 0.1.7
 - Fix to REAL type encoder to force primitive encoding form encoding.
 - Fix to CHOICE decoder to handle explicitly tagged, indefinite length
   mode encoding
+- Fix to REAL type decoder to handle negative REAL values correctly. Test
+  case added.
 
 Revision 0.1.6
 --------------
